app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-app
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
